# Jhon-Crow-real-time-voice-replacement

./: .gitignore  CLAUDE.md  build.py  installer.iss  pyproject.toml
.github/workflows/: build-windows.yml
src/voice_replacer/: __init__.py  __main__.py  gui.py
