[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-replacer"
version = "0.1.2"
description = "Real-time voice replacement using neural TTS"
readme = "README.md"
license = {text = "Unlicense"}
requires-python = ">=3.9"
authors = [
    {name = "Voice Replacer Contributors"}
]
keywords = ["voice", "tts", "speech", "audio", "neural-network"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "numpy>=1.24.0",
    "sounddevice>=0.4.6",
    "vosk>=0.3.45",
    "piper-tts>=1.2.0",
    "onnxruntime>=1.16.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.5.0",
]
silero = [
    "torch>=2.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pyinstaller>=6.0.0",
]
all = [
    "voice-replacer[gui,silero,dev]",
]

[project.scripts]
voice-replacer = "voice_replacer.__main__:main"

[project.urls]
Homepage = "https://github.com/Jhon-Crow/real-time-voice-replacement"
Repository = "https://github.com/Jhon-Crow/real-time-voice-replacement"
Issues = "https://github.com/Jhon-Crow/real-time-voice-replacement/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.onnx"]
